2005-02-11  Jakub Jelinek  <jakub@redhat.com>

	* debug/chk_fail.c (__chk_fail): Add a while (1) loop around
	__libc_message to kill GCC warning about noreturn function returning.

	* elf/rtld.c (_dl_start): Set bootstrap_map.l_relocated even
	for already prelinked ld.so.

	* scripts/soversions.awk: Only record first WORDSIZE{32,64}
	matching line.

2005-02-11  Roland McGrath  <roland@redhat.com>

	[BZ #715]
	* Makefile (installed-stubs): New variable.
	Set to $(inst_includedir)/gnu/stubs.h if $(biarch) is no,
	or to $(inst_includedir)/gnu/stubs-$(biarch).h if otherwise.
	[$(biarch) != no] (install-others-nosubdir): Add $(installed-stubs).
	($(inst_includedir)/gnu/stubs.h): Use $(installed-stubs) for this
	rule's target.
	($(inst_includedir)/gnu/stubs.h): New target, install from ...
	* include/stubs-biarch.h: New file.

	* shlib-versions (i.86-.*-.*): Add WORDSIZE64 line mapping to x86_64.

	* Makeconfig ($(common-objpfx)soversions.mk): Depend on Makeconfig.
	Emit defn for variable `biarch'.

	* include/stub-tag.h: Update comment.

	* scripts/soversions.awk: Fix default version set handling.

2005-02-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/termios.h (CMSPAR): Define.
	* sysdeps/unix/sysv/linux/alpha/bits/termios.h: Add __USE_MISC
	and __USE_XOPEN guards to match linux/bits/termios.h.
	(CMSPAR): Define.
	* sysdeps/unix/sysv/linux/powerpc/bits/termios.h: Add __USE_MISC
	and __USE_XOPEN guards to match linux/bits/termios.h.
	(CMSPAR): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/termios.h: Add __USE_MISC
	and __USE_XOPEN guards to match linux/bits/termios.h.

2005-02-10  Roland McGrath  <roland@redhat.com>

	[BZ #157]
	* include/libc-symbols.h (stub_warning): Emit a marker section called
	.gnu.glibc-stub.NAME.
	* Makerules ($(objpfx)stubs): Depend on object files, not dep files.
	Use objdump to collect those marker section names.
	($(common-objpfx)shlib.lds): Discard .gnu.glibc-stub.* sections.
